--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ body * {
 #container {
     /* legal colocar a borda para entender sobre a caixa !
     border: 1px solid red;*/
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
     /* outra opção: 
