--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
 
     /* background: colo image repeat position size */
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -178,4 +179,15 @@ footer {
     text-align: center;
     padding: 24px 0;
     font-size: 14px;
+}
+
+/*media queries*/
+@media (min-widht: 700px){
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
 }
