--- a/style.css
+++ b/style.css
@@ -98,8 +98,7 @@ body * {
 }
 
 .light #switch button{
-    right: 0;
-    left: initial;
+    animation: slide-in 0.4s;
 }
 
 #switch span{
@@ -189,5 +188,15 @@ footer {
 
     .light {
         --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+}
+
+/* animation*/
+@keyframes slide-in {
+    from{
+        left: 0;
+    }
+    to {
+        left: 50%;
     }
 }
