--- a/style.css
+++ b/style.css
@@ -95,10 +95,16 @@ body * {
    left: 0;
    z-index: 1;
    transform: translateY(-50%);
+
+   animation: slide-back 0.2s;
 }
 
 .light #switch button{
-    animation: slide-in 0.4s;
+    animation: slide-in 0.2s forwards;
+}
+
+switch button:hover{
+    outline: 8px solid var(--highlight-color)
 }
 
 #switch span{
@@ -198,5 +204,14 @@ footer {
     }
     to {
         left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from{
+        left: 50%;
+    }
+    to {
+        left: 0;
     }
 }
